<resources>
    <string name="app_name">OnlineExams</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup">SignUp</string>
    <string name="are_you_a_student_or_a_teacher">Are you a Student or a Teacher?</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="continue_">Continue</string>
    <string name="institute_name">Institute Name</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="branch_">Branch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_classroom">Create new classroom</string>
    <string name="classrooms">Classrooms</string>
    <string name="title">Title</string>
    <string name="enter_classroom_details">Enter Classroom details</string>
    <string name="add_students">Add Students</string>
    <string name="create_classroom">Create Classroom</string>
    <string name="batch">Batch</string>
    <string name="roll_no">Roll No</string>
    <string name="add_all_students_from_above_branch">Add All students from above branch</string>
    <string name="add_new_exam">Add new Exam</string>
    <string name="view_participants">View participants</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="due_date">Due Date</string>
    <string name="create_new_exam">Create New Exam</string>
    <string name="due_time">Due Time</string>
    <string name="question_paper">Question Paper</string>
    <string name="choose_file">Choose File</string>
    <string name="add_answer_script">Add answer script</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="no_classrooms_yet">No Classrooms yet</string>
</resources>