<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_aft_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_stotea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/are_you_a_student_or_a_teacher"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_aft_acctype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_stotea"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <RadioButton
                    android:id="@+id/rb_aft_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teacher" />

                <RadioButton
                    android:id="@+id/rb_aft_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/student" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_aft_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rg_aft_acctype"
                android:layout_margin="20dp"
                android:background="@drawable/rc_dark_blue_bg"
                android:text="@string/continue_"
                android:textColor="@color/white" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>