<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".fragments.ClassRoomFragment">

    <TextView
        android:id="@+id/tv_fcr_no_classroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_classrooms_yet"
        android:visibility="gone" />

    <!--TODO: unhide and implement view all participants feature -->
    <Button
        android:id="@+id/btn_fcrt_view_participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/blue_stroke_rc_bg"
        android:text="@string/view_participants"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_exam_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_fcrt_view_participants" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_new_exam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_new_exam"
        android:src="@drawable/ic_baseline_add_24_white" />


    <include
        layout="@layout/fullscreen_progress_light_bg"
        android:visibility="gone" />

</RelativeLayout>