<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".fragments.CreateNewClassRoomFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_fcncr_take_subject_details_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/enter_classroom_details"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/title"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_fcncr_classroom_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/branch_"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_fcncr_classroom_branch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:inputType="textCapCharacters" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/batch"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_fcncr_classroom_batch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:inputType="number" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_fcncr_add_students"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/rc_dark_blue_bg"
                android:text="@string/add_students"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/rl_fcncr_add_students_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_fcncr_add_all_branch_students"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/blue_stroke_rc_bg"
            android:text="@string/add_all_students_from_above_branch" />

        <SearchView
            android:id="@+id/sv_fcncr_search_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_fcncr_add_all_branch_students" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_fcncr_student_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_fcncr_create_classroom"
            android:layout_below="@+id/sv_fcncr_search_student"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_fcncr_create_classroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:background="@drawable/rc_dark_blue_bg"
            android:text="@string/create_classroom"
            android:textColor="@color/white" />

    </RelativeLayout>

    <include
        layout="@layout/fullscreen_progress_light_bg"
        android:visibility="gone" />

</RelativeLayout>